--- a/css/style.css
+++ b/css/style.css
@@ -89,21 +89,32 @@ form
 	left: 57px;
 	text-align: left;
 	padding: 0;
-	border: solid grey 1px;
 	background: white;
 	outline: none;
 	font-size: 14px;
 	width: 485px;
 	list-style: none;
+	box-shadow: 0 0 1px black;
 }
 #result  a 
 {
 	color: #491442;
 	text-decoration: none;
 }
-h3, p
+
+h3
 {
-	margin: 0px;
+	margin: 10px 0 0 10px;
+}
+
+h6
+{
+	margin: 0 10px;
+}
+
+.resultat p
+{
+	margin: 10px;
 }
 
 .resultat
