Add resultat.php page
*This page is not finished yet

--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,39 @@ header
 
 .logo img
 {
-	vertical-align: middle;
 	height: 150px;
+}
+
+.resultatpage
+{
+	text-align: left;
+	height: 140px;
+}
+
+.resultatpage > a > .brand
+{
+	float: left;
+}
+
+.resultatpage > a > .brand > .logo
+{
+
+}
+
+.resultatpage > a > .brand > .logo > img
+{
+	height: 100px;
+}
+
+.resultatpage > a > .brand > h3
+{
+	width: 229px;
+	margin: 10px 0;
+	text-align: center;
+	color: white;
+	text-shadow: 0 0 50px white;
+	font-family: Intro;
+	height: 20px;
 }
 
 h1
@@ -57,6 +88,18 @@ h1
 	box-shadow: 0px 0px 1px white;
 }
 
+.resultatsearch
+{
+	position: relative;
+	top: 50px;
+	left: 50px;
+}
+
+.resultatsearch > form
+{
+	
+}
+
 form
 {
 	margin: 0;
@@ -73,6 +116,11 @@ form
 	box-shadow: none;
 	border: solid #754F7E 1px;
 	background: rgba(255,255,255, 0.8);
+}
+
+.resultatsearch > form > #searchbar
+{
+	margin: 0;
 }
 
 #searchbar:focus
@@ -96,6 +144,16 @@ form
 	list-style: none;
 	box-shadow: 0 0 1px black;
 }
+
+.resultatsearch > #result
+{
+	position: absolute;
+	bottom: auto;
+	left: 230px;
+	top: 38px;
+	width: 483px;
+}
+
 #result  a 
 {
 	color: #491442;
@@ -134,7 +192,7 @@ li
 	display: list-item;
 }
 
-.searchsection button
+.searchsection button, .resultatsearch button
 {
 	outline: none;
 	font-size: 14px;
@@ -146,15 +204,68 @@ li
 	border: solid white 1px;
 }
 
-.searchsection button:hover
+.searchsection button:hover, .resultatsearch button:hover
 {
 	background: #8D6696;
 	cursor: pointer;
 }
 
-.searchsection button:active
+.searchsection button:active, .resultatsearch button:active
 {
 	color: #;
 	box-shadow: inset 0 5px 10px #583B5E;
 	background: #754F7E;
+}
+
+.allresult
+{
+	clear: both;
+	margin-left: 50px;
+	margin-top: 50px;
+}
+
+.allresult > ul
+{
+	list-style: none;
+	padding: 0;
+}
+
+.allresult > ul > li
+{
+	margin-bottom: 20px;
+}
+
+.allresult > ul > li > h3
+{
+	margin: 0;
+	font-size: 24px;
+}
+
+.allresult > ul > li > h3:hover
+{
+	text-shadow: 0 0 10px black;
+	-webkit-transition: text-shadow 0.1s;
+	-moz-transition: text-shadow 0.1s;
+	-ms-transition: text-shadow 0.1s;
+	-o-transition: text-shadow 0.1s;
+	transition: text-shadow 0.1s;
+}
+
+.allresult > ul > li > h3 > a
+{
+	color: white;
+	text-decoration: none;
+}
+
+.allresult > ul > li > .link
+{
+	color: #003768;
+	font-size: 14px;
+}
+
+.allresult > ul > li > .description
+{
+	color: white;
+	font-size: 14px;
+	font-weight: 300;
 }
