Update get condition

--- a/css/style.css
+++ b/css/style.css
@@ -154,7 +154,7 @@ form
 	float: left;
 	position: absolute;
 	top: 87px;
-	left: 7;
+	left: 6px;
 	display: block;
 	text-align: left;
 	padding: 0;
